--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do list assignment</title>
     <script defer type="text/javascript" src="api-client.js"></script>
     <script defer type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>ToDo List</h1>
+    <div id="create-task">
+      <input type="text" placeholder="New Task" id="new-task-input-field" />
+      <button id="btn-add-new-task">Add</button>
+    </div>
+    <form>
+      <!-- <input type="checkbox" />First item
+      <button id="delete">DEL</button> -->
+    </form>
+  </body>
 </html>
