--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" placeholder="New Task" id="new-task-input-field" />
       <button id="btn-add-new-task">Add</button>
     </div>
-    <form>
+    <form id="to-do-list">
       <!-- <input type="checkbox" />First item
       <button id="delete">DEL</button> -->
     </form>
