--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <script defer type="text/javascript" src="api-client.js"></script>
     <script defer type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1>ToDo List</h1>
+    <h1>To Do List</h1>
     <div id="create-task">
       <input type="text" placeholder="New Task" id="new-task-input-field" />
       <button id="btn-add-new-task">Add</button>
